--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>hongan's blog</title>
         <style type="text/css">
             body{
-                background-image: url(img/1.jpg);s
+                background-image: url(img/1.png);s
                 background-repeat: no-repeat;
                 background-repeat: repeat-y;
                 background-repeat: repeat-x;
